# Proyecto7_Equipo3_Multiclase

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  dockerignore  main.py  pyproject.toml
app/: styles.css
data/processed/: X_test_clean.csv  X_test_final.csv  X_test_scaled.csv  X_train_clean.csv  X_train_scaled.csv  nhanes_clean.csv  nhanes_ui_cleaned.csv  nhanes_ui_women_processed_isa.csv  y_test.csv  y_train.csv  y_train_final.csv
data/raw/: nhanes_ui_women.csv
docs/: data_processed_dictionary.md  data_raw_dictionary.md  dataset_dictionary.md  etl_decisions.md  etl_report.md  executive_report.md  technical_report.md
models/: 03_xgboost_baseline.ipynb  04_xgboost.ipynb
notebooks/: 00_eda_etl.ipynb  01_pipeline.ipynb  02_pipeline_clean.ipynb  02_random_forest.ipynb  03_lightgbm.ipynb  04_xgboost.ipynb  05_ensemble.ipynb  pipeline.ipynb
notebooks/modeling/: notebook_camila.ipynb  notebook_gabi.ipynb  notebook_iris.ipynb  notebook_isa.ipynb  notebook_maryori.ipynb
src/: db.py
