[project]
name = "Proyecto7_Equipo3_Multiclase"
version = "0.1.0"
description = "Clasificación multiclase de incontinencia urinaria femenina mediante Machine Learning (NHANES 2017-2023)"
requires-python = ">=3.11"
dependencies = [
    # ─── Datos ────────────────────────────────────────────────────────────────
    "pandas>=2.2",
    "numpy>=1.26",
    "pyreadstat>=1.2",          # Lectura de archivos .XPT del CDC
    # ─── Visualización ────────────────────────────────────────────────────────
    "matplotlib>=3.8",
    "seaborn>=0.13",
    # ─── Machine Learning ─────────────────────────────────────────────────────
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "imbalanced-learn>=0.12",   # SMOTE
    # ─── Persistencia de modelos ──────────────────────────────────────────────
    "joblib>=1.3",
    # ─── Notebooks ────────────────────────────────────────────────────────────
    "jupyter>=1.0",
    "ipykernel>=6.29",
    # ─── Backend app ──────────────────────────────────────────────────────────
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
]
